<resources>
    <string name="app_name">手机门禁</string>
    <string name="title_username">username</string>
    <string name="title_email">email</string>
    <string name="title_home">Home</string>
    <string name="title_user">用户管理</string>
    <string name="title_repo">记录管理</string>
    <string name="menu_netting">系统设置</string>
    <string name="menu_dataupload">远程开门</string>
    <string name="txt_count">记录数</string>
    <!-- action -->
    <string name="action_enter">Enter</string>
    <string name="action_settings">Settings</string>
    <string name="action_IP">服务器IP:</string>
    <string name="action_port">端口号:</string>
    <string name="action_connect">连接</string>
    <string name="action_psw">通信密码:</string>
    <string name="action_device">设备序号:</string>

    <string name="User_name">用户名：</string>
    <string name="old_psw">当前密码：</string>
    <string name="new_psw">新密码：</string>
    <string name="qt_psw">确认密码：</string>


    <!-- menu -->
    <string name="menu_title_user">@string/title_user</string>
    <string name="menu_title_repo">@string/title_repo</string>
    <string name="menu_title_trending">门禁设置</string>
    <string name="menu_title_about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
